chore: use Java 11 collection buiders