@@ -179,9 +179,7 @@ public final class GatlingMojo extends AbstractGatlingExecutionMojo {
 
   private Set<File> runDirectories() {
     File[] directories = resultsFolder.listFiles(File::isDirectory);
-    return (directories == null)
-        ? Collections.emptySet()
-        : new HashSet<>(Arrays.asList(directories));
+    return directories == null ? Set.of() : Set.of(directories);
   }
 
   private void iterateBySimulations(
@@ -342,7 +340,7 @@ public final class GatlingMojo extends AbstractGatlingExecutionMojo {
   private List<String> simulations(boolean interactive) throws MojoFailureException {
     // Solves the simulations, if no simulation file is defined
     if (simulationClass != null) {
-      return Collections.singletonList(simulationClass);
+      return List.of(simulationClass);
 
     } else {
       List<String> simulations =
